--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,14 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <script>
+    if (location.protocol != 'http:'){
+      location.href = 'http:' + window.location.href.substring(window.location.protocol.length);
+      console.log('forcing http')
+    } else {
+      console.log("served over http")
+    }
+    </script>
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
