--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,14 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <script>
+    <!--script>
     if (location.protocol != 'http:'){
       location.href = 'http:' + window.location.href.substring(window.location.protocol.length);
       console.log('forcing http')
     } else {
       console.log("served over http")
     }
-    </script>
+  </script-->
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -28,7 +28,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>
-        DOMO LLENO
+        Domo Lleno | Festival de Video Experimental para Domo
     </title>
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700" rel="stylesheet"/>
   </head>
