added meta tag images

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,28 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <!-- COMMON TAGS -->
+    <title>Domo Lleno | Festival de Video Experimental para Domo</title>
+    <!-- Search Engine -->
+    <meta name="description" content="Se realizará del 21 al 23 de noviembre en los tres únicos domos del país: Maloka, Planetario de Bogotá (Idartes) y Planetario de Medellín (Explora).">
+    <meta name="image" content="https://domolleno.gov.co/static/images/open-graph-facebook.png">
+    <!-- Schema.org for Google -->
+    <meta itemprop="name" content="Domo Lleno | Festival de Video Experimental para Domo">
+    <meta itemprop="description" content="Se realizará del 21 al 23 de noviembre en los tres únicos domos del país: Maloka, Planetario de Bogotá (Idartes) y Planetario de Medellín (Explora).">
+    <meta itemprop="image" content="https://domolleno.gov.co/static/images/open-graph-facebook.png">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Domo Lleno | Festival de Video Experimental para Domo">
+    <meta name="twitter:description" content="Se realizará del 21 al 23 de noviembre en los tres únicos domos del país: Maloka, Planetario de Bogotá (Idartes) y Planetario de Medellín (Explora).">
+    <meta name="twitter:image:src" content="https://domolleno.gov.co/static/images/open-graph-twitter.png">
+    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+    <meta name="og:title" content="Domo Lleno | Festival de Video Experimental para Domo">
+    <meta name="og:description" content="Se realizará del 21 al 23 de noviembre en los tres únicos domos del país: Maloka, Planetario de Bogotá (Idartes) y Planetario de Medellín (Explora).">
+    <meta name="og:image" content="https://domolleno.gov.co/static/images/open-graph-facebook.png">
+    <meta name="og:url" content="http://domolleno.gov.co">
+    <meta name="og:site_name" content="Domo Lleno | Festival de Video Experimental para Domo">
+    <meta name="og:locale" content="es_CO">
+    <meta name="og:type" content="website">
     <!--script>
     if (location.protocol != 'http:'){
       location.href = 'http:' + window.location.href.substring(window.location.protocol.length);
@@ -27,9 +49,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>
-        Domo Lleno | Festival de Video Experimental para Domo
-    </title>
+
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700" rel="stylesheet"/>
   </head>
   <body>
