--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
+    <meta name="theme-color" content="#ffffff">
     <!-- COMMON TAGS -->
     <title>Domo Lleno | Festival de Video Experimental para Domo</title>
     <!-- Search Engine -->
@@ -27,6 +27,28 @@
     <meta name="og:site_name" content="Domo Lleno | Festival de Video Experimental para Domo">
     <meta name="og:locale" content="es_CO">
     <meta name="og:type" content="website">
+    <style>
+    .loader:empty {
+      position: absolute;
+      top: calc(50% - 4em);
+      left: calc(50% - 4em);
+      width: 6em;
+      height: 6em;
+      border: 1.1em solid rgba(255, 255, 255, 0.2);
+      border-left: 1.1em solid #ffffff;
+      border-radius: 50%;
+      animation: load8 1.1s infinite linear;
+    }
+
+    @keyframes load8 {
+      0% {
+        transform: rotate(0deg);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+    </style>
     <!--script>
     if (location.protocol != 'http:'){
       location.href = 'http:' + window.location.href.substring(window.location.protocol.length);
@@ -56,7 +78,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root"></div>
+    <div id="root" class="loader"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
